--- a/Financier.Web/Pages/Index.cshtml
+++ b/Financier.Web/Pages/Index.cshtml
@@ -42,3 +42,9 @@
   }
   <div>
 </div>
+<script src="https://www.unpkg.com/apollo-client-browser@1.9.0/dist/apollo-client.min.js"></script>
+<script src="~/js/items.js"></script>
+<script>
+  var element = document.getElementById("3129045d-1de9-4a8f-9fd5-8944c4e9ff1a;185b4a38-12a6-4ead-b055-782d1db9156f");
+  document.renderItems(element);
+</script>
