--- a/Financier.Web/wwwroot/css/site.css
+++ b/Financier.Web/wwwroot/css/site.css
@@ -2,78 +2,95 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
 }
 
 .flex-container {
-  display: flex;
-  flex-flow: wrap;
+    display: flex;
+    flex-flow: wrap;
 
-  justify-content: space-between;
-  text-align: left;
+    justify-content: space-between;
+    text-align: left;
 }
 
-.flex-container .flex-item {
-  background: hotpink;
+.flex-container .flex-date {
+    background: hotpink;
+}
+
+.flex-container .flex-description {
+    background: hotpink;
+}
+
+.flex-container .flex-debit {
+    background: hotpink;
+}
+
+.flex-container .flex-credit {
+    background: cyan;
 }
 
 .flex-container .flex-tags {
-  max-width: 90%;
-  text-align: left;
+    background: hotpink;
+    max-width: 90%;
+    text-align: left;
 }
 
 .flex-container .flex-value {
-  background: cyan;
-  font-family: monospace;
-  text-align: right;
+    background: cyan;
+    font-family: monospace;
+    text-align: right;
+}
+
+.flex-container .flex-tags {
+    background: hotpink;
 }
