Switch to SVG charts

--- a/Financier.Web/wwwroot/css/chart.css
+++ b/Financier.Web/wwwroot/css/chart.css
@@ -1,8 +1,9 @@
-.charts .datum {
+.charts .chart rect {
+    fill: steelblue;
+}
+
+.charts .chart text {
+    fill: white;
     font: 10px sans-serif;
-    background-color: steelblue;
-    text-align: right;
-    padding: 3px;
-    margin: 1px;
-    color: black;
+    text-anchor: end;
 }
