--- a/Financier.Web/Views/Statements/GetMonth.cshtml
+++ b/Financier.Web/Views/Statements/GetMonth.cshtml
@@ -9,16 +9,16 @@
 
 <!-- bar chart -->
 <div class="charts">
-  <div id="asset-costs">
+  <svg class="chart" id="asset-costs">
     <h2>
       Assets
     </h2>
-  </div>
-  <div id="expense-costs">
+  </svg>
+  <svg class="chart" id="expense-costs">
     <h2>
       Expenses
     </h2>
-  </div>
+  </svg>
 </div>
 
 <link href="~/css/chart.css" rel="stylesheet">
@@ -66,33 +66,54 @@
           `
         })
         .then(response => {
-          drawChart(".charts #asset-costs", response.data.statement.assetCosts);
-          drawChart(".charts #expense-costs", response.data.statement.expenseCosts);
+
+          new Chart(".charts #asset-costs", 420, 20)
+            .render(response.data.statement.assetCosts);
+          new Chart(".charts #expense-costs", 420, 20)
+            .render(response.data.statement.expenseCosts);
         });
     }
 
-    function drawChart(selector, costs) {
-      var amounts = costs
-        .map(x => x.amount)
-        .sort()
-        .reverse();
-      var scale = d3.scaleLinear()
-        .domain([0, d3.max(amounts)])
-        .range([0, 800]);
+    function Chart(selector, width, barHeight) {
+      this.selector = selector;
+      this.width = width;
+      this.barHeight = barHeight;
 
-      d3.select(selector)
-        .selectAll("div")
-          .data(costs)
-        .enter().append("div")
-          .attr("class", "datum")
-          .style("width", d => {
-            return `${scale(d.amount).toFixed()}px`;
-          }).text(d => {
-            return d.tags
-              .map(tag => tag.name)
-              .join(", ");
-          });
+      this.scale = function(costs) {
+        var amounts = costs
+          .map(x => +x.amount.toFixed())
+
+        return d3.scaleLinear()
+          .domain([0, d3.max(amounts)])
+          .range([0, this.width]);
+      };
     }
+
+    Chart.prototype.render = function(costs) {
+      var barChart = d3.select(this.selector)
+        .attr("width", this.width)
+        .attr("height", this.barHeight * costs.length);
+
+      var bar = barChart.selectAll("g")
+          .data(costs)
+        .enter().append("g")
+          .attr("transform", (d, i) => `translate(0, ${i * this.barHeight})`);
+
+      var scaledValues = this.scale(costs);
+      bar.append("rect")
+        .attr("width", d => scaledValues(+d.amount.toFixed()))
+        .attr("height", this.barHeight - 1);
+
+      bar.append("text")
+        .attr("x", d => scaledValues(+d.amount.toFixed()) - 3)
+        .attr("y", this.barHeight / 2)
+        .attr("dy", ".35em")
+        .text(d => {
+          return d.tags
+            .map(tag => tag.name)
+            .join(", ");
+        });
+    };
 
     request(2019, 4);
   })();
