--- a/Financier.Web/wwwroot/css/chart.css
+++ b/Financier.Web/wwwroot/css/chart.css
@@ -3,7 +3,21 @@
 }
 
 .charts .chart text {
-    fill: white;
+    fill: black;
     font: 10px sans-serif;
     text-anchor: middle;
+}
+
+.axis text {
+    font: 10px sans-serif;
+}
+
+.axis path, .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
+
+.x.axis path {
+    display: none;
 }
