--- a/Financier.Web/Views/Items/Chart.cshtml
+++ b/Financier.Web/Views/Items/Chart.cshtml
@@ -9,11 +9,15 @@
 <!-- bar chart -->
 <div class="charts">
   <div class="items">
+    <!-- TODO: rename to .input -->
+    <!-- TODO: place .tags div within .input div -->
     <div class="tags">
+      <!-- TODO: move from-picker and to-picker as siblings of .tags -->
       <div class="from-picker">
         From:&nbsp;
         <input id="from-date" class="month-picker" />
       </div>
+      <!-- TODO: rename from-picker to to-picker -->
       <div class="from-picker">
         To:&nbsp;
         <input id="to-date" class="month-picker" />
@@ -28,9 +32,15 @@
       </div>
     </div>
 
-    <svg class="chart" id="asset-costs">
-    </svg>
+    <div class="results">
+      <svg class="chart" id="asset-costs">
+      </svg>
+
+      <div class="details">
+      </div>
+    </div>
   </div>
+
 </div>
 
 
@@ -146,20 +156,31 @@
       client
         .query({
           query: Apollo.gql`
-          {
+          query($tagNames: [String!], $fromYear: Int!, $fromMonth: Int!, $toYear: Int!, $toMonth: Int!){
             monthlyExpensesByTagNames(
-              tagNames: [${tags.map(name => `"${name}"`).join(", ")}],
-              fromYear: ${fromYear},
-              fromMonth: ${fromMonth},
-              toYear: ${toYear},
-              toMonth: ${toMonth}
+              tagNames: $tagNames,
+              fromYear: $fromYear,
+              fromMonth: $fromMonth,
+              toYear: $toYear,
+              toMonth: $toMonth
             ) {
               year,
               month,
-              amount
+              amount,
+              items {
+                description, 
+                at,
+                amount
+              }
             }
+          }`,
+          variables: {
+              tagNames: tags,
+              fromYear: fromYear,
+              fromMonth: fromMonth,
+              toYear: toYear,
+              toMonth: toMonth
           }
-          `
         })
         .then(response => {
           render(response.data.monthlyExpensesByTagNames);
@@ -299,6 +320,80 @@
       //   });
     };
 
+    function Details(selector, data) {
+      this.selector = selector;
+      this.data = data;
+
+      // TODO: sort the items in descending order by date
+    }
+
+    Details.prototype.getContainer = function() {
+      return $(this.selector);
+    };
+
+    Details.prototype.clear = function() {
+      var container = this.getContainer();
+
+      container.empty();
+    };
+
+    Details.prototype.render = function() {
+      var container = this.getContainer();
+      this.data.forEach(item => {
+        var identifer = `${item.year}-${item.month}`;
+        var monthElement = `
+          <div class="month">
+            <h1>${identifer}</h1>
+
+            <div id="${identifer}" class="items">
+            </div>
+          </div>
+        `;
+
+        container.append(monthElement);
+
+        var items = new Month(`.items#${identifer}`, item.items);
+
+        items.render();
+      });
+    };
+
+    function Month(selector, data) {
+      this.selector = selector;
+      this.data = data;
+
+      // TODO: sort the items in ascending order by date
+    }
+
+    Month.prototype.getContainer = function() {
+      return $(this.selector);
+    };
+
+    Month.prototype.clear = function() {
+      this.getContainer().empty();
+    };
+
+    Month.prototype.render = function() {
+      var container = this.getContainer();
+      this.data.forEach(item => {
+        var html = `
+          <div class="item">
+            <div class="date">
+              ${item.at}
+            </div>
+            <div class="description">
+              ${item.description}
+            </div>
+            <div class="amount">
+              ${item.amount}
+            </div>
+          </div>
+        `;
+
+        container.append(html);
+      });
+    };
+
     (function() {
       $(".month-picker").MonthPicker({ Button: false });
       $(".month-picker#from-date").val("11/2018");
@@ -314,8 +409,13 @@
       var to = dates.toMonthYear();
 
       chart.request(from[0], from[1], to[0], to[1], tagNames, (monthlyExpensesByTagNames) => {
+        var details = new Details(".details", monthlyExpensesByTagNames);
         chart.clear();
+        details.clear();
+
         chart.render(monthlyExpensesByTagNames);
+        details.render();
+
       });
     });
 
