--- a/Financier.Web/Views/Items/Chart.cshtml
+++ b/Financier.Web/Views/Items/Chart.cshtml
@@ -324,7 +324,17 @@
       this.selector = selector;
       this.data = data;
 
-      // TODO: sort the items in descending order by date
+      this.data.sort((first, second) => {
+        var firstDate = new Date(first.year, first.month, 1);
+        var secondDate = new Date(second.year, second.month, 1);
+
+        if (firstDate < secondDate) {
+          return 1;
+        } else if (firstDate > secondDate) {
+          return -1;
+        }
+        return 0;
+      });
     }
 
     Details.prototype.getContainer = function() {
@@ -361,6 +371,26 @@
     function Month(selector, data) {
       this.selector = selector;
       this.data = data;
+
+      this.data.sort((first, second) => {
+        var firstDate = getDate(first);
+        var secondDate = getDate(second);
+
+        if (firstDate < secondDate) {
+          return -1;
+        } else if (firstDate > secondDate) {
+          return 1;
+        }
+        return 0;
+      });
+
+      var getDate = (string) => {
+        return new Date(
+          string.substr(0, 4),
+          string.substring(5, 2),
+          string.substring(8, 2)
+        );
+      }
 
       // TODO: sort the items in ascending order by date
     }
